--- a/descuentos.html
+++ b/descuentos.html
@@ -7,6 +7,24 @@
     <title>Porcentajes y descuentos</title>
 </head>
 <body>
-    <h1>Porcentajes y descuentos</h1>
+    <header>
+        <h1>Porcentajes y descuentos</h1>
+        <p>Este es el segundo taller del curso práctico de JS</p>
+    </header>
+    <section>
+         <h2>Calcula el precio a pagar de tus productos con descuento</h2>
+        <form action="/">
+            <label for="InputPrice">Precio del producto</label>
+            <input id="InputPrice" type="number">
+
+            <label for="InputDiscount">Descuento del producto</label>
+            <input id="InputDiscount" type="number">
+
+            <button type="button" onclick="finalPriceBtn()">Precio Final</button>
+            <p id="finalPrice"></p>
+        </form>
+    </section>
+
+    <script src="./descuentos.js"></script>
 </body>
 </html>
